econ4.css
.heading-line {
    stroke: #ccc;
    stroke-width: 1;
}

.programme-row text, .programme-row text tspan {
    font-size: 14px;
    font-weight: bold;
}

.subprogramme-row text, .subprogramme-row text tspan {
    font-size: 13px;
    fill: #5A5A5A;
}

text.spend-value , text.spend-value tspan {
    font-size: 13px;
    fill: #484848;
}

.background-rect {
    fill: #F2F2F2;
}

.bar-rect {
    fill: url(#bar-gradient)
}

defs .bar-gradient  stop {
    stop-color: blue;
}

#bar-gradient stop:nth-child(1) {
  stop-color: #91C9C4;
}
#bar-gradient stop:nth-child(2) {
  stop-color: #1D4A3F;
}

.gridline {
    stroke: #EFEFEF;
}


select {
    max-width: 100%;
}

